# LogBookKonniMac

./: .gitignore  .project  CMakeLists.txt  README  README.md  TODO  VERSION.cmake  VERSION.cmake.old  buildall.sh  makezip.sh
buildosx/InstallOSX/: logbookkonni_pi.pkgproj.in
cmake/: PluginLocalization.cmake  PluginPackage.cmake
data/: Help.html
libs/AndroidHeaders/: CMakeLists.txt
libs/nmea0183/: CMakeLists.txt
libs/nmea0183/src/: Response.hpp  Sentence.hpp  dpt.cpp  gga.hpp  gll.cpp  gll.hpp  gsv.cpp  hdg.cpp  hdm.hpp  latlong.cpp  long.cpp  mtw.cpp  mtw.hpp  mwv.hpp  nmea0183.cpp  nmea0183.hpp  rmb.cpp  rmc.hpp  sentence.cpp  talkerid.cpp  vhw.cpp  vhw.hpp  vtg.cpp  vwr.cpp  vwr.hpp  wpl.hpp  xte.cpp  xte.hpp  zda.cpp  zda.hpp
libs/nmea0183/src/nmea0183/: nmea0183.h
po/: POTFILES.in  ar_SA.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  it.po  it_IT.po  ja_JP.po  logbookkonni_pi.pot  mr_IN.po  nb.po  nb_NO.po  nl.po  nl_NL.po  pl.po  pl_PL.po  pt.po  pt_BR.po  (+13 more)
src/: Buicons.cpp  Buicons.h  CrewList.cpp  CrewList.h  Export.cpp  Export.h  EzGrid.cpp  EzGrid.h  FastComboEditor.cpp  FastComboEditor.h  GridCellChoiceRenderer.cpp  GridCellChoiceRenderer.h  Logbook.cpp  Logbook.h  LogbookDialog.cpp  LogbookDialog.cpp.bak  LogbookDialog.h  LogbookHTML.cpp  LogbookHTML.h  LogbookOptions.cpp  LogbookOptions.h  Maintenance.cpp  Maintenance.h  MessageBoxOSX.cpp  MessageBoxOSX.h  Options.cpp  Options.h  OverView.cpp  OverView.h  boat.cpp  boat.h  icons.cpp  icons.h  json_defs.h  jsonreader copy.h  jsonreader.cpp  jsonval.cpp  jsonval.h  jsonwriter copy.cpp  jsonwriter copy.h  (+5 more)
src/nmea0183/: LatLong.hpp  RMB.hpp  Response.hpp  SatInfo.h  Sentence.hpp  (+34 more)
(+7 files in other folders)
